# CoffeeMachine

./: CMakeLists.txt  Main.qml  beancontainer.cpp  beancontainer.h  cinnamoncontainer.cpp  cinnamoncontainer.h  coffeebrewer.cpp  coffeebrewer.h  coffeedrinks.h  coffeegrinder.cpp  coffeegrinder.h  coffeepresser.cpp  coffeepresser.h  concreteingredients.cpp  concreteingredients.h  concretemachineparts.cpp  concretemachineparts.h  containable.h  container.cpp  convertible.h  cupcontainer.cpp  cupcontainer.h  device.cpp  device.h  heatable.cpp  heatable.h  ingredient.cpp  ingredient.h  machinepart.cpp  machinepart.h  main.cpp  milkcontainer.cpp  milkcontainer.h  milkheater.cpp  milkheater.h  processtype.h  processworker.cpp  processworker.h  progressinfo.cpp  recipe.cpp  (+13 more)
